# dco

./: README.md  pyproject.toml
docs/theoretical_analysis/: precon_illustration.ipynb
examples/: async_regression.py  compressed_sensing.py  precon_illustration.py  ridge_regression.py  source_localization.py
examples/notebooks/: compressed_sensing.ipynb  precon_illustration.ipynb  ridge_regression.ipynb  source_localization.ipynb
examples/ridge_regression/: node.py  server.py
examples/ridge_regression/notebooks/: nodes.ipynb  server.ipynb
examples/ridge_regression/scripts/: node.py  server.py
examples/scripts/ridge_regression/: node.py
examples/scripts/source_localization/: node.py  server.py
src/dco/: __init__.py  autodiff.py  core.py  local_objective.py  loss_function.py  model.py  network.py  optimizer.py  regularizer.py  utils.py
src/dco/algorithm/: __init__.py  algorithm.py
src/dco/model/: __init__.py  gradient.py  model.py  regularizer.py  regulizer.py
src/dco/numeric/: __init__.py  autodiff.py  regularizer.py
src/dco/optimizer/: __init__.py  non_robust.py  optimizer.py  robust.py
src/dco/utils/: __init__.py  check.py  logger.py  registry.py
tests/: compressed_sensing.py  precon_illustration.py  ridge_regression.py  source_localization.py
