[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "dco"
version = "0.1.0"
description = "Distributed Composite Optimization"
authors = [
    {name = "Rui Huang", email = "R.Huang@lboro.ac.uk"}
]

dependencies = [
    "autograd>=1.7.0",
    "gossip @ git+https://github.com/rui-huang-opt/gossip.git",
]

[tool.setuptools.packages.find]
where = ["src"]

