[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "dco"
version = "0.1.0"
description = "Distributed Composite Optimization"
authors = [
    {name = "Rui Huang", email = "R.Huang@lboro.ac.uk"}
]

dependencies = [
    "autograd>=1.7.0",
    "gossip @ git+https://github.com/rui-huang-opt/gossip.git",
]

[project.optional-dependencies]
test = [
    "matplotlib>=3.10.1",
    "cvxpy[ECOS]>=1.6.3",
    "networkx>=3.4.2",
]

[tool.setuptools.packages.find]
where = ["src"]
